--- a/Code/View/view_controller.complex.root_collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.root_collectionview.cachetracker.swift.liquid
@@ -101,14 +101,16 @@ final class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewCo
     // MARK: - UICollectionViewDelegate
 
     override func collectionView(_ collectionView: UICollectionView, willDisplay cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
-        let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
-        let item = consumer.object(at: indexPath.row)
-        cell.willDisplay(item)
+        if let cell = cell as? {{ prefix }}{{ module_info.name }}ViewCell {
+            let item = consumer.object(at: indexPath.row)
+            cell.willDisplay(item)
+        }
     }
 
     override func collectionView(_ collectionView: UICollectionView, didEndDisplaying cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
-        let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
-        cell.stopDisplay()
+        if let cell = cell as? {{ prefix }}{{ module_info.name }}ViewCell {
+            cell.stopDisplay()
+        }
     }
 
     override func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
