--- a/Code/Router/router.mcflurry.embed.swift.liquid
+++ b/Code/Router/router.mcflurry.embed.swift.liquid
@@ -8,7 +8,7 @@ final class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info
     // MARK: - VIPER Vars
 
     weak var calleeOutput: (ViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
-    weak var transitionHandler: ViperModuleTransitionHandler!
+    weak var transitionHandler: ViperModuleTransitionHandler?
 
     // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
     
