fix simple typo

--- a/Code/View/view_controller.cell_context.swift.liquid
+++ b/Code/View/view_controller.cell_context.swift.liquid
@@ -5,6 +5,6 @@ import UIKit
 struct {{ prefix }}{{ module_info.name }}ViewCellContext {
 
     // TODO: Place your code here
-    //let loadModelImage: (_ model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) async -> UImage?
+    //let loadModelImage: (_ model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) async -> UIImage?
 
 }
