--- a/Code/Router/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Code/Router/presenter_tests.complex.cachetracker.swift.liquid
@@ -50,7 +50,7 @@ final class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     class MockRouter: {{ prefix }}{{ module_info.name }}RouterInput {
 
-        weak var calleeOutput: RamblerViperModuleOutput!
+        weak var calleeOutput: ViperModuleOutput! RamblerViperModuleOutput!
         weak var transitionHandler: RamblerViperModuleTransitionHandlerProtocol!
 
         // MARK: - Vars
