--- a/Code/Router/router.mcflurry.tabbar.swift.liquid
+++ b/Code/Router/router.mcflurry.tabbar.swift.liquid
@@ -7,7 +7,7 @@ final class {{ prefix }}{{ module_info.name }}Router: NSObject, {{ prefix }}{{ m
 
     // MARK: - VIPER Vars
 
-    weak var calleeOutput: (ViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
+    weak var calleeOutput: ViperModuleOutput!
     weak var transitionHandler: ViperModuleTransitionHandler?
     weak var output: {{ prefix }}{{ module_info.name }}RouterOutput!
 
