--- a/Code/Router/router.mcflurry.embed.swift.liquid
+++ b/Code/Router/router.mcflurry.embed.swift.liquid
@@ -13,10 +13,12 @@ final class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info
     // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
     
     func embedSomeModule() {
-        transitionHandler.embedModuleUsing(SomeModuleConfigurator(), into: {{ prefix }}{{ module_info.name }}ModuleContainerIdentifier.module1.rawValue).thenChainUsingBlock { (module) -> ViperModuleOutput? in
-            let module = module as! SomeModuleInput
-            module.configure()
-            return nil // or self.calleeOutput
+        UIView.performWithoutAnimation {
+            transitionHandler.embedModuleUsing(SomeModuleConfigurator(), into: {{ prefix }}{{ module_info.name }}ModuleContainerIdentifier.module1.rawValue).thenChainUsingBlock { (module) -> ViperModuleOutput? in
+                let module = module as! SomeModuleInput
+                module.configure()
+                return nil // or self.calleeOutput
+            }
         }
     }
 
